# winterseminar_project

./: Makefile.am  arraygenerator.cc  arraygenerator.hh  autogen.sh  configure.ac  insertionsort.cc  insertionsort.hh  main.cc  main_test.cc  selectionsort.cc  selectionsort.hh  sortalgorithm.hh
