#initialize autoconf
AC_INIT([Feature1], [0.0], [my@email.com], [mysite.com])

#initialize automake 
AM_INIT_AUTOMAKE([foreign subdir-objects])

#setup location of configuration header
AC_CONFIG_HEADERS([config.h])

#setup location of makefile
AC_CONFIG_FILES([Makefile])

#Select C++ project
AC_PROG_CXX

#Generate Makefile
AC_OUTPUT
